--- a/readMe
+++ b/readMe
@@ -4,6 +4,7 @@ En este repositorio resuelvo la prueba propuesta de Node.js.
     -Si añades /jokes/ a la ruta, he creado diferentes archivos routes.js para tener una mejor estructura del proyecto, y desde allí tenemos diferentes métodos. Si eliges entre añadir 'Chuck' o 'Dad', te trae un chiste de una API diferente.
     -Con el método POST, puedes agregar un 'joke' y un 'numberJoke' de chiste. Previamente he creado un modelo de chiste que luego exporto para realizar los métodos POST, PUT y DELETE.
     -Con los métodos PUT y DELETE, puedes modificar o borrar el chiste utilizando su valor 'numberJoke' en lugar de su ID. Todos estos métodos han sido probados a través de Postman y funcionan correctamente.
+    -Como pequeño extra también creé dos métodos GET que te traen la lista completa de chistes de mi BD y la búsqueda por 'numberJoke'.
     -En este caso, he elegido MongoDB como base de datos, ya que me siento muy cómodo conectando con Mongoose al trabajar con Node.js.
     -También he creado otra ruta llamada 'numbers', donde resuelvo dos desafíos matemáticos. En uno de ellos, se debe sumar 1 al número que se pasa como parámetro en la URL. Lo transformo utilizando parseInt y realizo la operación, lo cual funciona correctamente.
     -El otro desafío consiste en recibir varios números y calcular su mínimo común múltiplo. Para esto, también utilizo parseInt para los parámetros y luego separo los números por comas utilizando split, y finalmente utilizo el método map(Number), el cual no conocía pero me sirve de aprendizaje, que itera sobre cada elemento y los transforma en números. Además, instalé la biblioteca 'mathjs' para utilizar la función lcm, que calcula el mínimo común múltiplo.
